cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     Hola estudiantes este es el sitio web
     sigueme en twitter en julio45667899/ si tienes dudas, preguntame
+    <p>
+        Hola amigos & amigas este es mi sitio web
+        sigueme en twitter en julio45667899 si tienes dudas, preguntame en vivo en mi twitch/celismx
+    </p>
 </body>
 </html>
